datadog first cut

--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -9,59 +9,58 @@ revision = 1
 
 ### Overview of Datadog
 
-![Datadog](https://toobstar.github.io/images/caveman_dog.jpeg)
+![Dog](https://toobstar.github.io/images/caveman_dog.jpeg)
 
-Following my recent post about [application instrumentation](https://toobstar.github.io/posts/2025-02-01_instrumentation/) I was interested to do a deeper dive into [Datadog](https://www.datadoghq.com) which I've now got quite a few years experience with. It's been interesting to me to observe how the offering has expanded over this time and how our use of it crossed a tipping point from promising to extremely useful.
+Following my recent post about [application instrumentation](https://toobstar.github.io/posts/2025-02-01_instrumentation/) I was interested to share a deeper dive on [Datadog](https://www.datadoghq.com) which I've now got quite a few years experience with. It's been interesting to me to observe how the offering has expanded over this time and how our use of it crossed a tipping point from promising to extremely useful.
 
 ### Some history
 
-Datadog was founded in 2010 and the idea came out of the personal needs of the founders (Olivier Pomel and Alexis Lê-Quôc) working in the tech industry. In the early days Datadog focused on infrastructure monitoring, providing tools to track server performance, network traffic, and other key metrics.   Over time Datadog expanded its offerings to include log management, security monitoring, and application performance monitoring (APM) cability.  I can't say how much of this expansion of the product was internally built but certainly they focussed on [expansion through acquisition ](https://www.datadoghq.com/blog/tag/acquisition/) and appear to have been extremely successful with that strategy.  Salesforce: please take note. 
+Datadog was founded in 2010 and the idea came out of the personal needs of the founders (Olivier Pomel and Alexis Lê-Quôc) working in the tech industry. In the early days Datadog focused on infrastructure monitoring, providing tools to track server performance, network traffic, and other key metrics.   Over time Datadog expanded its offerings to include log management, security monitoring, and application performance monitoring (APM) cability.  I can't say how much of this expansion of the product was internally built but certainly they focussed on [expansion through acquisition](https://www.datadoghq.com/blog/tag/acquisition/) and appear to have been extremely successful with that strategy.  Salesforce: please take note on how to do product integration. 
+
+### Product Offering
+
+The product suite is now extremely expansive across:
+- Observability
+- Security
+- Software Delivery
+- Other emerging domains (like AI)
+
+![Datadog Product Offering Observability](https://toobstar.github.io/images/datadog_product_observability.png)
 
 
-datadog_product_observability
+### Why this works
+
+Some of what can be done in Datadog can also be done directly in the CSP (AWS, Azure etc) but the rationale for a platform based approach with a polished UX, and the ability to keep users completely away from the CSP is great for security and governance purposes. 
+
+Most importantly though the feature that works for our teams is that the service catalogue in Datadog allows you to connect services with service owners, and this solves the 'getting the information to the right audience' piece.  Combined with the ability to push notifications via Slack to specific channels and tickets directly into those team's backlogs means that a lot of friction is removed from the system. 
 
 
-Continued Innovation: Datadog continues to innovate and expand its platform, incorporating machine learning and artificial intelligence to provide more advanced insights and automation capabilities.   
-Essentially, Datadog's history is one of identifying a critical need in the evolving cloud computing landscape and building a successful company around a platform that addresses that need.
+### Cloud Security
 
+Having had practical experience with CrowdStrike - which I'm happy to believe is best of breed ([as determined by chief arbiter Gartner](https://www.crowdstrike.com/en-us/resources/reports/2024-gartner-market-guide-for-cloud-native-application-protection-platforms/) - I have observed the challenges of translating the insights into actions and resolutions.  Datadog may not be as strong on the detection side, but I believe their product offering to be considerably more effective. 
 
-
-
-Datadog is a cloud-based monitoring and security service that provides real-time visibility into an organization's entire technology stack.
-
-Here's a breakdown:
-
-Core Functionality:
-
-Monitoring: Tracks key metrics like server performance, network traffic, database activity, and application performance.
-Log Management: Collects, searches, and analyzes logs from various sources to identify and troubleshoot issues.
-Security Monitoring: Detects and responds to security threats like malware, intrusions, and suspicious activity.
-Key Features:
-
-Real-time dashboards: Visualize key metrics and identify performance bottlenecks.
-Alerting: Receive notifications about critical events and potential issues.
-Integration: Seamlessly integrates with a wide range of tools and services.
-Machine learning: Uses AI to identify anomalies and predict future issues.
-Benefits:
-
-Improved performance: Identify and resolve performance issues quickly.
-Enhanced security: Proactively detect and respond to security threats.
-Increased efficiency: Automate tasks and gain valuable insights into your infrastructure.
-Better collaboration: Improve communication and collaboration between teams.
-In essence, Datadog helps businesses:
-
-Maintain system stability: Ensure their applications and services are running smoothly.
-Improve operational efficiency: Streamline IT operations and reduce downtime.
-Gain valuable insights: Understand the performance of their technology stack and make data-driven decisions.
-Who uses Datadog?
-
-Datadog is used by a wide range of organizations, from small startups to large enterprises, across various industries.
-
-If you're looking for a comprehensive monitoring and security solution, Datadog is definitely worth considering.
-
-
-
-
-
+In particular I very much appreciated the visual overview of the product overview which presents as a dynamic dashboard: 
 
 ![Datadog security](https://toobstar.github.io/images/datadog_security.png)
+
+The visual is laid out from top to bottom following the typical software development lifecycle from code, to pipeline, running application, and finally instrumentation.  At each step the appropriate interface points for security and risk control are presented.  
+
+The brilliance of this is it's educating on what each of these controls are, and the relevant risks at each level at the current point in time. It's also presumably an excellent way to upsell customers on more capabilities they could be directing towards Datadog.  I went into some detail explaining these controls in a [previous article](https://toobstar.github.io/posts/2024-08-27_cloud_maturity/) but actually think this visual goes a long way to providing a clear overview. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
