--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -1,21 +1,24 @@
 +++
-title = 'Datadog: Thoughts and Modern App Instrumentation'
+title = 'Datadog: Deepdive on an effective Instrumentation Tool'
 date = 2025-02-03T10:24:33+11:00
 draft = true
 tags = ['Security', 'CISO', 'Cloud', 'SaaS']
 revision = 1
 +++
 
+![Dog](https://toobstar.github.io/images/caveman_dog.jpeg)
+
 
 ### Overview of Datadog
 
-![Dog](https://toobstar.github.io/images/caveman_dog.jpeg)
-
 Following my recent post about [application instrumentation](https://toobstar.github.io/posts/2025-02-01_instrumentation/) I was interested to share a deeper dive on [Datadog](https://www.datadoghq.com) which I've now got quite a few years experience with. It's been interesting to me to observe how the offering has expanded over this time and how our use of it crossed a tipping point from promising to extremely useful.
+
+![Datadog Logo](https://toobstar.github.io/images/datadog_logo.png)
 
 ### Some history
 
 Datadog was founded in 2010 and the idea came out of the personal needs of the founders (Olivier Pomel and Alexis Lê-Quôc) working in the tech industry. In the early days Datadog focused on infrastructure monitoring, providing tools to track server performance, network traffic, and other key metrics.   Over time Datadog expanded its offerings to include log management, security monitoring, and application performance monitoring (APM) cability.  I can't say how much of this expansion of the product was internally built but certainly they focussed on [expansion through acquisition](https://www.datadoghq.com/blog/tag/acquisition/) and appear to have been extremely successful with that strategy.  Salesforce: please take note on how to do product integration. 
+
 
 ### Product Offering
 
