datadog revs - publish

--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -1,8 +1,8 @@
 +++
 title = 'Datadog: Deepdive on an effective Instrumentation Tool'
 date = 2025-02-03T10:24:33+11:00
-draft = true
-tags = ['Security', 'CISO', 'Cloud', 'SaaS']
+draft = false
+tags = ['Security', 'CISO', 'Cloud', 'SaaS', 'CIO']
 revision = 1
 +++
 
