--- a/content/posts/2024-05-17_msp.md
+++ b/content/posts/2024-05-17_msp.md
@@ -1,5 +1,5 @@
 +++
-title = 'Managed Service Providers (MSPs)'
+title = 'Why would you use a Managed Service Provider (MSP)?'
 date = 2024-05-17T10:19:25+10:00
 draft = false
 categories = []
