--- a/content/posts/2024-05-17_msp.md
+++ b/content/posts/2024-05-17_msp.md
@@ -3,7 +3,7 @@ title = 'Why would you use a Managed Service Provider (MSP)?'
 date = 2024-05-17T10:19:25+10:00
 draft = false
 categories = []
-tags = ['CIO', 'IT', 'Cost']
+tags = ['CIO', 'IT', 'Cost', 'Supply Chain', 'Risk']
 revision = 1
 +++
 
