adjust colour and style of link decoration

--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -8,22 +8,24 @@ revision = 1
 
 ![Reading](https://toobstar.github.io/images/caveman_reading.jpg)
 
-Markdown is a solution to allow simple plain text to appear with mark-up when rendered on a target platform.  You can indicate titles or bold / italic emphasis with simple patterns that are quick to learn and reasonably easy to use.  Typically the writing of the text would be somewhere that is expected to be processed further (like on a form to reply to a thread in a web forum).  And because this is apparently an *impossibly hard problem to solve* therefore we (the humans) must solve this for the machines with these additional characters sprinkled through our plain text. 
+Markdown is a solution to allow simple plain text to appear with mark-up when rendered on a target platform.  You can indicate titles or bold / italic emphasis with simple patterns that are quick to learn and reasonably easy to use.  Typically the writing of the text would be somewhere that is expected to be processed further (like on a form to reply to a thread in a web forum).  And because this is apparently an *impossibly hard problem to solve*  we (the humans) must solve this for the machines with these additional characters sprinkled through our regular text. 
 
-This seemed quite reasonable 20 years ago when browser compability and modern HTML / Javascript techniques had not converged.  But it is bizarre to me that Markdown is more popular now than ever.  How did this happen?  It seems quite primitive that you'd be writing *italics* in this way:
+This seemed quite reasonable 20 years ago when browser compability and modern HTML / Javascript techniques had not converged.  But it is bizarre to me that Markdown is more used now than ever.  How did this happen?  It seems quite primitive that you'd be writing *italics* in this way:
 
 ```markdown
 *italics*
 ```
 
-The first time I paid any attention to Markdown came via [Jeff Atwood](https://blog.codinghorror.com/is-html-a-humane-markup-language/) and his efforts to use Markdown in the new [developer website](http://stackoverflow.com) he and Joel Spolsky were creating.  They documented their efforts through their own blogs and a podcast they hosted.  It caused some [controversy](https://www.reddit.com/r/programming/comments/ajj7k/jeff_atwood_calls_out_markdown_creator_john/) at the time.
+The first time I paid any attention to Markdown came via [Jeff Atwood](https://blog.codinghorror.com/is-html-a-humane-markup-language/) and his efforts to use Markdown in the new [developer website - Stack Overflow - ](http://stackoverflow.com) that he and Joel Spolsky were creating.  They documented their efforts through their own blogs and a podcast they hosted.  Their discussion on this caused some [controversy](https://www.reddit.com/r/programming/comments/ajj7k/jeff_atwood_calls_out_markdown_creator_john/) at the time.
 
-The [Markdown project](https://daringfireball.net/projects/markdown/) was created by Josh Gruber and it's impressive to note that not much has changed since then despite this open invitation from the author:
+The [Markdown project](https://daringfireball.net/projects/markdown/) was created by Josh Gruber more than 20 years ago and it's impressive to note that not much has changed since then despite this open invitation from the author:
 
 > It’s my hope that [the mailing list](https://pairlist6.pair.net/pipermail/markdown-discuss/) will lead to good ideas for future improvements to Markdown.  
 
-Anyway - here we are and it's now more broadly used than ever and has become the defacto standard for typing lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these aren't things I care about greatly.
+Anyway - here we are and it's now more broadly used than ever and has become the defacto standard for entering lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these are things I'd prefer to avoid if I could.  Nonetheless it is surprising that even with the magic of AI this is still an important and regularly used tool.  
 
-But of course it is more confusing than ever in the light of the magic of AI/ML that this is still a thing that has a place in the world.  In my case it's become part of an [interesting pattern to create static websites](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are many libraries that allow [blogs like this one](https://toobstar.github.io) to be published on static hosting platforms such as GitHub.  There are also [many clients](https://apps.apple.com/us/app/markdown-editor/id1458220908?mt=12) for writing Markdown which means actually you don't need to manually add the *'s and the #'s unless you really want to.
+A common pattern I find I'm using is that a source control system (like Github or Bitbucket) natively supports markdown, and then document collaboration tools like [Google Docs](https://support.google.com/docs/answer/12014036?hl=en) and [Atlassian Confluence](https://support.atlassian.com/confluence-cloud/docs/available-markdown-commands/) can render these directly, which opens up many opportunities for automation and integration between systems.
+
+In my case it's become part of an [interesting approach to deliver a static website](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are many libraries that allow [blogs like this one](https://toobstar.github.io) to be published on static hosting platforms such as GitHub.  There are also [clients](https://apps.apple.com/us/app/markdown-editor/id1458220908?mt=12) for writing Markdown which means actually you don't need to manually add the *'s and the #'s unless you really want to.
 
 And finally there are [methods of syndication](https://askcloudarchitech.com/posts/tutorials/auto-generate-post-payload-medium-com/) that use APIs to allow articles to be published on platforms like [Medium](https://medium.com/@TobyVidler).   So actually ... it's still pretty useful. 
