--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -1,5 +1,5 @@
 +++
-title = 'Datadog: Deepdive on an effective Instrumentation Tool'
+title = 'Datadog: Deepdive on a powerful Instrumentation Tool'
 date = 2025-02-03T10:24:33+11:00
 draft = false
 tags = ['Security', 'CISO', 'Cloud', 'SaaS', 'CIO']
