--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -39,6 +39,24 @@ In theory building a system that can self-manage through automated retention rul
 
 The cost explorer will give the basics quite easily and allow you to present cost and filter/or group by all the usual parameters you would want.
 
+![AWS S3 Cost Report](https://toobstar.github.io/images/aws_s3_cost.jpg)
+
+The issue soon arises that cost per GB varies depending on how you have your S3 configured.  And actually further complicating that picture is that file count matters and many smaller files under certain circumstances can end up costing much more than fewer larger files of the same overall size. 
+
+## Activating the secret Storage usage report
+
+The cost explorer claims to present cost *and usage* but by default it actually only shows cost. To access the usage panel you need to do a not-obvious filtering step of navigating to the **Usage type** filtering menu.  From there you need to search for "timedstorage" and then enable all options (there were 28 when I last ran this but presumably that will change over time and will need be reviewed). 
+
+![AWS Cost Report Timed Storage setting](https://toobstar.github.io/images/aws_cost_timedstorage.jpg)
+
+After you do this and without any obvious reason why, a new panel will accompany the cost one which is *actually usage*.
+
+
+![AWS Cost Report Usage](https://toobstar.github.io/images/aws_s3_usage)
+
+
+
+
 FA Frequent Access
 IA Infrequent Access
 AA Archive Access
@@ -53,4 +71,3 @@ https://aws.amazon.com/s3/storage-classes/intelligent-tiering/
 
 
 
-Cost Explorer -> add filter "TimedStorage" then "magic"
