--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -35,6 +35,18 @@ The challenge for the infrastructure manager is that data is easy to create or r
 
 In theory building a system that can self-manage through automated retention rules can avoid a lot of this pain. In practice (at least where humans are involved) it can be hard to achieve.  This ever-expanding data footprint will likely proceed unnoticed until the cost of it forces there to be attention applied.  It's when you start trying to manage [the cost of S3](https://docs.aws.amazon.com/AmazonS3/latest/userguide/aws-usage-report-understand.html) that you really start diving into the configuration options that are available. 
  
+## Management Tools
+
+The recommended tool for managing S3 in AWS is [Storage Lens](https://aws.amazon.com/s3/storage-lens/).  It is an analytics service that is helpful in many ways but particularly for:
+
+- **Usage Monitoring**: The number of objects, bucket sizes, and growth trends.
+- **Activity Insights** : Request pattern and access frequency reporting
+- **Cost Optimization**: Helps identify unused or rarely accessed data so you can move it to lower-cost storage classes
+- **Security & Compliance Monitoring**: Detects potential security risks such as publicly accessible buckets
+- **Multi-Account Visibility** : Allows centralised reporting across multi-account setups
+
+But, accessing many of these features in a useful way requires enabling the premium (paid) version of Storage Lens, and in my experience the cost and usage capabilities are still limited.
+
 ## Managing Usage and Costs
 
 The cost explorer will give the basics quite easily and allow you to present cost and filter/or group by all the usual parameters you would want.
@@ -51,11 +63,30 @@ The cost explorer claims to present cost *and usage* but by default it actually 
 
 After you do this and without any obvious reason why, a new panel will accompany the cost one which is *actually usage*.
 
+![AWS Cost Report Usage](https://toobstar.github.io/images/aws_s3_usage.jpg)
 
-![AWS Cost Report Usage](https://toobstar.github.io/images/aws_s3_usage)
+By combining the two views of usage and cost, along with the powerful filtering and grouping capabilities of cost explorer you can get a very clear picture of what is happening with the data storage. 
+
+## Having gained a deep understanding of usage patterns, what next?
+
+The key goal will always be to delete what is not required.  But presuming that process is taken as far as practical, the next step for managing cost is to think about the storage class used for each case.  Where the requirement for access/retrieval is not immediate there are options for lower cost.
 
 
+| Storage Class              | Access Frequency | Cost     | Retrieval Time | Use Case            |
+|----------------------------|------------------|----------|----------------|---------------------|
+| S3 Standard                | Frequent         | High     | Instant        | Websites, apps      |
+| Intelligent-Tiering        | Varies           | Moderate | Instant        | Data lakes, ML      |
+| Standard-IA                | Infrequent       | Lower    | Instant        | Backups             |
+| One Zone-IA                | Infrequent       | Lower    | Instant        | Secondary backups   |
+| Glacier Instant Retrieval  | Rare             | Low      | Milliseconds   | Compliance data     |
+| Glacier Flexible Retrieval | Rare             | Lowest   | 1 min – 12 hrs | Long-term storage   |
+| Glacier Deep Archive       | Very Rare        | Cheapest | 12 – 48 hrs    | Regulatory archives |
+| S3 Outposts                | Frequent         | High     | Instant        | Hybrid cloud        |
+| S3 Express One Zone        | Frequent         | High     | Instant        | AI/ML, analytics    |
 
+## AWS S3 Intelligent Tiering
+
+Where that is not the case, [intelligent tiering](https://aws.amazon.com/s3/storage-classes/intelligent-tiering/) is an interesting model for dynamic storage-class control that is managed by AWS. 
 
 FA Frequent Access
 IA Infrequent Access
@@ -66,7 +97,7 @@ DAA Deep Archive Access
 
 
 
-https://aws.amazon.com/s3/storage-classes/intelligent-tiering/
+
 
 
 
