--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -86,13 +86,19 @@ The key goal will always be to delete what is not required.  But presuming that 
 
 ## AWS S3 Intelligent Tiering
 
-Where that is not the case, [intelligent tiering](https://aws.amazon.com/s3/storage-classes/intelligent-tiering/) is an interesting model for dynamic storage-class control that is managed by AWS. 
+Where there is:
+- an ongoing requirement for (potential) instant access
+- it's not possible to say whether the data can be deleted or not
 
-FA Frequent Access
-IA Infrequent Access
-AA Archive Access
-AIA Archive Instant Access
-DAA Deep Archive Access
+then [intelligent tiering](https://aws.amazon.com/s3/storage-classes/intelligent-tiering/) can be an appealing model for dynamic storage-class control that is managed by AWS. In this model AWS tracks the access pattern for objects and will over time progress that object through cheaper classes of storage on the basis that this lack of access will continue.  We can eventually get the benefits of cheaper storage classes without having to make the decision as to what that class should be.
+
+The data starts in the 'Frequent Access' (FA) tier.  After 30 days it graduates to 'Infrequent Access' (IA).  At this level the reduction in cost is around 40%.  If there continues to be no interaction with the data, it then graduates to 'Archive Access' (AA).  At AA level the cost reduction is around 60% from FA.
+
+Essentially it's a bet that over a basket of objects most will not be frequently accessed and therefore justify a cheaper cost. From the cost explorer and when grouping by usage type, you can then tell a story of what is happening with the data which is quite powerful to understand the relationship between access patterns, sizing and cost such as the following:
+
+![AWS Cost Report Storage Classes](https://toobstar.github.io/images/aws_s3_storage_classes.jpg)
+
+
 
 
 
