--- a/content/posts/2025-01-06_aws_s3.md
+++ b/content/posts/2025-01-06_aws_s3.md
@@ -1,7 +1,7 @@
 +++
 title = 'Optimising Cloud Storage in AWS and finding the secret cost report'
 date = 2024-12-06T15:29:43+11:00
-draft = true
+draft = false
 tags = ['AWS', 'CIO', 'Cloud', 'Infrastructure', 'S3']
 revision = 1
 +++
@@ -10,7 +10,7 @@ revision = 1
 
 # Cloud Storage using AWS
 
-Most businesses operating in AWS will typically end up being heavy users of their storage (infrastructure as a) service (IaaS) S3.  The key parameters when considering a cloud storage setup are:
+Most businesses operating in AWS will typically end up being heavy users of their storage service S3.  S3 (alongside EC2) is one of the most successful infrastructure as a service (IaaS) offerings of AWS.  The key parameters when considering a cloud storage setup are:
 
 - Durability and availability
 The ability to easily control redundancy and performance capabilities via configuration is extremely powerful.  
@@ -35,7 +35,7 @@ The challenge for the infrastructure manager is that data is easy to create or r
 
 In theory building a system that can self-manage through automated retention rules can avoid a lot of this pain. In practice (at least where humans are involved) it can be hard to achieve.  This ever-expanding data footprint will likely proceed unnoticed until the cost of it forces there to be attention applied.  It's when you start trying to manage [the cost of S3](https://docs.aws.amazon.com/AmazonS3/latest/userguide/aws-usage-report-understand.html) that you really start diving into the configuration options that are available. 
  
-## Management Tools
+## Management Tools - Storage Lens
 
 The recommended tool for managing S3 in AWS is [Storage Lens](https://aws.amazon.com/s3/storage-lens/).  It is an analytics service that is helpful in many ways but particularly for:
 
@@ -54,6 +54,8 @@ The cost explorer will give the basics quite easily and allow you to present cos
 ![AWS S3 Cost Report](https://toobstar.github.io/images/aws_s3_cost.jpg)
 
 The issue soon arises that cost per GB varies depending on how you have your S3 configured.  And actually further complicating that picture is that file count matters and many smaller files under certain circumstances can end up costing much more than fewer larger files of the same overall size. 
+
+It's also natural to focus on the sizing element of cloud data storage, but a key element of cost is network transfers.  These could be within AWS's networks or out of their networks (but not *into* their cloud which they will happily do for free).  Transfer costs and penalties associated with file count are the 2 hidden cost pain points of cloud storage. 
 
 ## Activating the secret Storage usage report
 
@@ -97,6 +99,10 @@ The data starts in the 'Frequent Access' (FA) tier.  After 30 days it graduates 
 Essentially it's a bet that over a basket of objects most will not be frequently accessed and therefore justify a cheaper cost. From the cost explorer and when grouping by usage type, you can then tell a story of what is happening with the data which is quite powerful to understand the relationship between access patterns, sizing and cost such as the following:
 
 ![AWS Cost Report Storage Classes](https://toobstar.github.io/images/aws_s3_storage_classes.jpg)
+
+## Conclusion
+
+It's interesting to consider alternatives to solving cloud storage with S3 such as those [shared by well known agitator DHH](https://world.hey.com/dhh/it-s-five-grand-a-day-to-miss-our-s3-exit-b8293563), but for most businesses that is impractical due to the effort and expertise required, and the fact that usage requirements can be hard to predict and the value prop of cloud is just so practical. But, management and oversight does require ongoing attention to ensure cost is controlled and other requirements like security and performance are met.
 
 
 
